<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cardviewReparacion"
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textViewTituloVIN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/text_FistName"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textFirstNameValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_toEndOf="@+id/textViewTituloVIN"
                    android:text="@string/textValuexx"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/textViewMarca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewTituloVIN"
                    android:layout_marginTop="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/text_Lastname"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textLastNameValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewTituloVIN"
                    android:layout_toEndOf="@+id/textViewMarca"
                    android:text="@string/textValuexx"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/textViewModelo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewMarca"
                    android:layout_marginTop="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/text_job_Title"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textJobTitleValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textLastNameValue"
                    android:layout_toEndOf="@+id/textViewModelo"
                    android:text="@string/textValuexx"
                    android:textSize="20sp" />


            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

