<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.checkin.RegisterAcivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutFirstName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/text_name"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="1dp"
        app:counterEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLastName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/text_lastName"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="1dp"
        app:counterEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutID"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/text_personal_ID"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="1dp"
        app:counterEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLastName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPersonalID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutJopTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/text_job_title"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="1dp"
        app:counterEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutID">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtjopTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/text_save"
        android:textColor="@color/icons"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewAddAdress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:text="Add Address"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutJopTitle" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddAdress"
        app:layout_constraintVertical_bias="0.100000024">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="true"
                android:overScrollMode="never"
                android:paddingBottom="?attr/actionBarSize"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>